# OllamaTerm

./: README.md  config.example.toml  pyproject.toml
src/ollama_chat/: app.py  capabilities.py  chat.py  config.py  screens.py  tooling.py
src/ollama_chat/managers/: theme.py
src/ollama_chat/support/: question_service.py
src/ollama_chat/tools/: __init__.py  abstracts.py  ask_user_question_tool.py  base.py  question_tool.py  registry.py  webfetch_tool.py
src/ollama_chat/widgets/: __init__.py  ask_question_widget.py  message.py
tests/: test_chat.py  test_question_screen.py  test_question_service.py  test_question_wiring.py  test_tools.py
