[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollamaterm"
version = "0.5.0"
description = "Terminal chat interface for local Ollama models"
authors = [{ name = "Web-Dev-Codi", email = "webdevcodi@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=8.0.1",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "rich>=14.3.2",
    "structlog>=25.5.0",
    "platformdirs>=4.9.2",
    "tomli-w>=1.2.0",
    "httpx>=0.28.0",
    "markdownify>=1.2.2",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "mypy>=1.19.1",
    "black>=26.1.0",
    "build>=1.4.0",
    "pre-commit>=4.5.1",
]

[project.scripts]
ollamaterm = "ollama_chat.__main__:main"

[project.urls]
Homepage = "https://github.com/Web-Dev-Codi/Arch-Linux-Ollama-LLM-Chat"
Repository = "https://github.com/Web-Dev-Codi/Arch-Linux-Ollama-LLM-Chat"
Issues = "https://github.com/Web-Dev-Codi/Arch-Linux-Ollama-LLM-Chat/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ollama_chat*"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "-q"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "BLE",
  "C4",
]
ignore = [
  "E203",
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["ollama_chat"]
combine-as-imports = false
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

